# de-la-mo

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
CMake/Modules/: FindACIS.cmake  FindSphinx.cmake
NURBS/: .gitignore  CMakeLists.txt  README.md
NURBS/data/: NURBS_CP_Planar1.txt
NURBS/doc/: doxyfile-jenkins.txt
NURBS/python/: Support.py  __init__.py  nurbs_example.py
NURBS/src/: ContainerList.hxx  NURBS.hxx  PointVector.hxx
NURBS/swig/: CADsupport.i  CADsupport_extends.i  CADsupport_renames.i  CADsupport_typemaps.i  ConfigSWIG.h
NURBS/test/: testNURBS.cpp
delamo/: CADwrap.py  api.py
doc/: conf.py.in  index.rst
examples/: 01_Planar_Single_Delam.py  02_Curved_Single_Delam.py  03_PlanarStiffener.py  05_Planar_Double_Delam.py  07_ComputedTomography_Damage.py  07_ComputedTomography_add_damage.py  08_ComputedTomography_Loop_Damage.py  08_ComputedTomography_add_damage.py  09_CohesiveLayer.py  11_Planar_Delam_Under_Stiffener.py  12_ShellSolidCoupling.py  13_Local_Region.py  14_Planar_Split.py  TODO.txt  extract_results.py
examples/data/: 13_NASA_Local_Mold.SAT  CP_Curved1.txt  CP_Curved4.txt  CP_Curved5.txt  CP_Planar2.txt  CurvedMold1.sat  CurvedShell1.sat  FlatMold.sat  FlatMold2.SAT  FlatShell.sat  FlatShell2.SAT  FlatShellTool.SAT  HatStiffener.csv  nasa-delam23-1.csv  nasa-delam23-2.csv  nasa-delam34-1.csv  nasa-delam34-2.csv  nasa-delam56-1.csv  nasa-delam56-2.csv  nasa-delam67-1.csv  nasa-delam67-2.csv  nasa-local-delam-1.csv  nasa-local-delam-2.csv
examples/data/nasa/: ProcessDelamination.m  WriteCSVBoundaryFile.m  compositeDelams.npz  compositeDelams.pptx  delam12-1.csv  delam12-2.csv  delam12.txt  delam23-1.csv  delam23-2.csv  delam23.txt  delam34-1.csv  delam34-2.csv  delam34.txt  delam56-1.csv  delam56-2.csv  delam56.txt  delam67-1.csv  delam67-2.csv  delam67.txt
examples/data/old_data/: ControlPointsCurved1.txt  ControlPointsCurved1_RHS.txt  ControlPointsCurved2.txt  ControlPointsCurved4.txt  ControlPointsPlanar1_RHS.txt  ControlPointsPlanar2.txt  ControlPointsPlanar2_RHS.txt  Delamination1.csv  Delamination1ShiftedX.csv  Delamination1ShiftedXMirroredX.csv  Delamination1ShiftedY.csv  Delamination1_Paraview.csv  Delamination2.csv  Delamination3.csv
examples/non_abaqus/: 14_Planar_Layup_Generate_SAT.py  15_StiffenerBlock_Layup_Generate_SAT.py
src/: ACIS.h  ACISModelBuilder.cpp  ACISModelBuilder.h  APIConfig.h  Layer.cpp  Layer.h  LayerBody.cpp  LayerBody.h  LayerMold.cpp  LayerMold.h  LayerSurface.cpp  LayerSurface.h  MBBody.cpp  MBBody.h  ModelBuilder.cpp  ModelBuilder.h  PNFind_ABS.cpp  PNFind_ABS.h  PNFind_BBox.cpp  PNFind_BBox.h  PNFind_EdgeMove.cpp  PNFind_EdgeMove.h  PNFind_UVseek.cpp  PNFind_UVseek.h  mb_utilities.cpp  mb_utilities.h  testCompositeBlock.cpp
src/swig/: CADmodeler.i  CADmodeler_extends.i  CADmodeler_renames.i  CADmodeler_typemaps.i
src/testcases/: app_cohesive.cpp  app_multi_delamination.cpp  app_shell_solid.cpp  app_simple.cpp  app_simple_loop.cpp  app_simple_sat.cpp  app_stiffener.cpp  testcase_common.cpp  testcase_includes.h
visualstudio/: DeLaMo.natvis  NURBS_API.natvis  delamo_min.supp
